Part-1: correction-6: The file css/style.css has been modified problem-6: The text-alignment of restaurant description has to be changed to 'justify' correction-6: The text-alignment of restaurant description text has been changed to justify for screens of all sizes by adding the block to the main style.css part:
/*correction-6*/
.resto p.desc {
    text-align: justify;
}

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,11 @@ body {
 img {
 	max-width: 100%;
 }
+/*correction-6*/
+.resto p.desc {
+    text-align: justify;
+}
+
 /* notre menu */
 .menu-toggle {
 	display: none;
